src/objects/Send_Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Add_Matching_Fields__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Add Matching Fields To Endpoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_Records__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Link Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Schema__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receive Schema</label>
        <referenceTo>Schema_Definition__c</referenceTo>
        <relationshipLabel>Easy Rest Send Interactions (Receive Schema)</relationshipLabel>
        <relationshipName>Easy_Rest_Send_Interactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receive_Subtree__c</fullName>
        <label>Receive Subtree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Configuration__c</fullName>
        <label>Easy Rest Send Configuration</label>
        <referenceTo>Send_Configuration__c</referenceTo>
        <relationshipLabel>Easy Rest Send Interactions</relationshipLabel>
        <relationshipName>Easy_Rest_Send_Interactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Send_Schema__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send Schema</label>
        <referenceTo>Schema_Definition__c</referenceTo>
        <relationshipLabel>Easy Rest Send Interactions</relationshipLabel>
        <relationshipName>Easy_Rest_Send_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Subtree__c</fullName>
        <label>Send Subtree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Easy Rest Send Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Easy Rest Send Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Easy Rest Send Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>